--- a/branches/wmv0800_Plugin/Source/CommonWindows/CommonWindows.vcxproj.filters
+++ b/branches/wmv0800_Plugin/Source/CommonWindows/CommonWindows.vcxproj.filters
@@ -45,21 +45,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WoWDirManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug_Win32\moc_WoWDirManager.cpp">
-      <Filter>Generated Files\Debug_Win32</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug_x64\moc_WoWDirManager.cpp">
-      <Filter>Generated Files\Debug_x64</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release_Win32\moc_WoWDirManager.cpp">
-      <Filter>Generated Files\Release_Win32</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release_x64\moc_WoWDirManager.cpp">
-      <Filter>Generated Files\Release_x64</Filter>
-    </ClCompile>
     <ClCompile Include="GeneratedFiles\Debug_Win32\moc_About.cpp">
       <Filter>Generated Files\Debug_Win32</Filter>
     </ClCompile>
@@ -90,6 +75,21 @@
     <ClCompile Include="AboutPlugins.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug_Win32\moc_GameDirManager.cpp">
+      <Filter>Generated Files\Debug_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug_x64\moc_GameDirManager.cpp">
+      <Filter>Generated Files\Debug_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release_Win32\moc_GameDirManager.cpp">
+      <Filter>Generated Files\Release_Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release_x64\moc_GameDirManager.cpp">
+      <Filter>Generated Files\Release_x64</Filter>
+    </ClCompile>
+    <ClCompile Include="GameDirManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_About.h">
@@ -98,17 +98,11 @@
     <ClInclude Include="GeneratedFiles\ui_About_Plugins.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
-    <ClInclude Include="GeneratedFiles\ui_WDM_Edit.h">
-      <Filter>Generated Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GeneratedFiles\ui_WDM_Main.h">
+    <ClInclude Include="GeneratedFiles\ui_GameDirManager_Main.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="WoWDirManager.h">
-      <Filter>Header Files</Filter>
-    </CustomBuild>
     <CustomBuild Include="UI\About.ui">
       <Filter>Form Files</Filter>
     </CustomBuild>
@@ -121,10 +115,13 @@
     <CustomBuild Include="UI\About_Plugins.ui">
       <Filter>Form Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="UI\WDM_Edit.ui">
+    <CustomBuild Include="GameDirManager.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="UI\GameDirManager_Edit.ui">
       <Filter>Form Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="UI\WDM_Main.ui">
+    <CustomBuild Include="UI\GameDirManager_Main.ui">
       <Filter>Form Files</Filter>
     </CustomBuild>
   </ItemGroup>
